@@ -1,3 +1,7 @@
+2004-12-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Support UserInfo via the Jabber vcard iq.
+
 2004-12-08  Pascal Scheffers  <pascal@scheffers.net>
 
 	* tkchat.tcl: Prevent multiple reconnect timers running at the same time.
